product page nav scroll button not showing issue resolved

--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -471,15 +471,6 @@
 
 
 @media only screen and (max-width: 765px) {
-  .navbar {
-    overflow-x: hidden;
-  }
-  .navButtonLeft {
-    display: none;
-  }
-  .navButtonRight {
-    display: none;
-  }
   .container {
     margin: 30px auto;
   }
@@ -559,4 +550,17 @@
     font-size: 10px;
     font-weight: 400;
   }
+}
+
+
+@media only screen and (min-width: 765px) {
+.navbar {
+  overflow-x: hidden;
+}
+.navButtonLeft {
+  display: none;
+}
+.navButtonRight {
+  display: none;
+}
 }
